fixed minor alignments on search result container, and payment form

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -136,7 +136,7 @@
   overflow: scroll;
   background: yellow;
   position: absolute;
-  top: 50%;
+  top: 100%;
   left: 5%;
   padding: 2% 2%;
   display: flex;
