--- a/src/css/payment.css
+++ b/src/css/payment.css
@@ -83,16 +83,16 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding: 1.5% 0 2% 2%;
-  box-sizing: border-box;
+  padding: 0.5% 0 2% 2%;
   background-color: var(--neutral1);
 }
 
 .payment-options-header-container {
   width: 100%;
+  height: 10%;
   display: flex;
   justify-content: space-between;
-  padding: 2% 1% 3% 1%;
+  padding: 1.5% 1% 2% 1%;
   box-sizing: border-box;
 }
 
@@ -118,7 +118,7 @@
   display: flex;
   flex-direction: column;
   height: 90%;
-  gap: 20px;
+  gap: 14px;
 }
 
 .payment-credit-card-container {
@@ -184,7 +184,7 @@ hr {
   height: 80%;
   display: flex;
   flex-wrap: wrap;
-  padding: 1% 2%;
+  padding: 2%;
   box-sizing: border-box;
 }
 
